--- a/templates/login.html
+++ b/templates/login.html
@@ -19,6 +19,9 @@
                         <div class="mb-3">
                             <label for="password" class="form-label">Password</label>
                             <input type="password" class="form-control" id="password" name="password" required>
+                            <div class="small mt-1 text-end">
+                                <a href="{{ url_for('auth.forgot_password') }}">Forgot password?</a>
+                            </div>
                         </div>
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="form-check-input" id="remember" name="remember">
