--- a/templates/results.html
+++ b/templates/results.html
@@ -116,7 +116,7 @@
                     <div class="text-center mt-4">
                         <a href="{{ url_for('main.analysis_form') }}" class="btn btn-primary">Start New Analysis</a>
                         <a href="{{ url_for('main.history') }}" class="btn btn-secondary">View History</a>
-                        <a href="{{ url_for('main.models_list') }}" class="btn btn-info">Browse All Models</a>
+                        <a href="{{ url_for('main.models_in_group', group_name='Regression Models') }}" class="btn btn-info">Browse Models</a>
                     </div>
                 </div>
             </div>
